Gateway/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-gateway
spec:
  ingressClassName: nginx

  rules:
    - host: app.local
      http:
        paths:
          - path: /1
            pathType: Prefix
            backend:
              service:
                name: first-f-app-service
                port:
                  number: 3000

          - path: /2
            pathType: Prefix
            backend:
              service:
                name: second-f-app-service
                port:
                  number: 4000

          - path: /3
            pathType: Prefix
            backend:
              service:
                name: third-f-app-service
                port:
                  number: 4200
